@@ -9,7 +9,13 @@
 #include <_mingw.h>
 #include <_mingw_unicode.h>
 
+#ifndef WINADVAPI
+#ifndef _ADVAPI32_
 #define WINADVAPI DECLSPEC_IMPORT
+#else
+#define WINADVAPI
+#endif
+#endif
 
 #ifndef CREDUIAPI
 #ifndef _CREDUI_
