@@ -30,7 +30,11 @@ extern "C" {
 #endif
 
 #ifndef WINADVAPI
+#ifndef _ADVAPI32_
 #define WINADVAPI WINIMPM
+#else
+#define WINADVAPI
+#endif
 #endif
 
 
